--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE >
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -170,9 +170,6 @@
     <footer class="page__footer">
       <p>&copy Udacity</p>
     </footer>
-    <script
-      type="text/javascript"
-      src="/cd0428-landing-page/js/app.js "
-    ></script>
+    <script type="text/javascript" src="/js/app.js"></script>
   </body>
 </html>
